# ps-pretty

./: .gitignore  LICENSE  ps-pretty.cabal  stack.yaml
app/: Main.hs
example/: Pretty.purs
src/: Lib.hs  Pretty.hs
